rework ScreenOptionMaster metric names to not depend on language specific row title create Mines row in ScreenPlayerOptions and move other options around

--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -1888,6 +1888,7 @@ NextAppearance=Left,Up,Right
 NextTurn=
 Reverse=Down,Left,Right,Left,Right
 HoldNotes=Right,Left,Down,Up
+Mines=
 Dark=
 CancelAll=Left,Right,Left,Right,Left,Right,Left,Right
 NextTheme=Left,Left,Left,Right,Right,Right,Left,Right
@@ -2710,21 +2711,22 @@ StyleIcon=0
 PrevScreen=
 NextScreen=
 
-OptionMenuFlags=rows,13
+OptionMenuFlags=rows,14
 
 Line1=list,Speed
 Line2=list,Accel;title,Acceler::-ation
 Line3=list,Effect
 Line4=list,Appearance;title,Appear::-ance
 Line5=list,Turn
-Line6=list,Transform;title,Trans::-form
+Line6=list,Transform;title,Insert
 Line7=list,Scroll
 Line8=list,NoteSkins
 Line9=list,Holds
-Line10=list,Hide
-Line11=list,Persp
-Line12=Steps
-Line13=Characters
+Line10=list,Mines
+Line11=list,Hide
+Line12=list,Persp
+Line13=Steps
+Line14=Characters
 
 [ScreenRaveOptions]
 PrevScreen=ScreenSelectMusic
@@ -2940,7 +2942,7 @@ TurnName,5=SHUFFLE
 Turn,6=mod,supershuffle
 TurnName,6=S.SHUFFLE
 
-Transform=9
+Transform=8
 TransformDefault=mod,no transform
 Transform,1=
 TransformName,1=OFF
@@ -2954,12 +2956,10 @@ Transform,5=mod,quick
 TransformName,5=QUICK
 Transform,6=mod,skippy
 TransformName,6=SKIPPY
-Transform,7=mod,mines
-TransformName,7=MINES
-Transform,8=mod,echo
-TransformName,8=ECHO
-Transform,9=mod,stomp
-TransformName,9=STOMP
+Transform,7=mod,echo
+TransformName,7=ECHO
+Transform,8=mod,stomp
+TransformName,8=STOMP
 
 Scroll=4
 ScrollDefault=mod,no reverse,no split,no alternate
@@ -2973,13 +2973,22 @@ Scroll,4=mod,alternate
 ScrollName,4=ALTERNATE
 
 Holds=3
-HoldsDefault=mod,no noholds
+HoldsDefault=mod,no noholds,no planted
 Holds,1=mod,noholds
 HoldsName,1=OFF
 Holds,2=
 HoldsName,2=ON
 Holds,3=mod,planted
 HoldsName,3=PLANTED
+
+Mines=3
+MinesDefault=mod,no nomines,no mines
+Mines,1=mod,nomines
+MinesName,1=OFF
+Mines,2=
+MinesName,2=ON
+Mines,3=mod,mines
+MinesName,3=ADD
 
 Hide=3
 HideDefault=mod,no dark,no blind
