add twister transform
reorganize transform options

--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -2718,7 +2718,7 @@ Line2=list,Accel;title,Acceler::-ation
 Line3=list,Effect
 Line4=list,Appearance;title,Appear::-ance
 Line5=list,Turn
-Line6=list,Transform;title,Insert
+Line6=list,Insert;title,Insert
 Line7=list,Scroll
 Line8=list,NoteSkins
 Line9=list,Holds
@@ -2942,24 +2942,24 @@ TurnName,5=SHUFFLE
 Turn,6=mod,supershuffle
 TurnName,6=S.SHUFFLE
 
-Transform=8
-TransformDefault=mod,no transform
-Transform,1=
-TransformName,1=OFF
-Transform,2=mod,little
-TransformName,2=LITTLE
-Transform,3=mod,wide
-TransformName,3=WIDE
-Transform,4=mod,big
-TransformName,4=BIG
-Transform,5=mod,quick
-TransformName,5=QUICK
-Transform,6=mod,skippy
-TransformName,6=SKIPPY
-Transform,7=mod,echo
-TransformName,7=ECHO
-Transform,8=mod,stomp
-TransformName,8=STOMP
+Insert=8
+InsertDefault=mod,no little,no wide,no big,no quick,no skippy,no echo,no stomp
+Insert,1=
+InsertName,1=OFF
+Insert,2=mod,little
+InsertName,2=LITTLE
+Insert,3=mod,wide
+InsertName,3=WIDE
+Insert,4=mod,big
+InsertName,4=BIG
+Insert,5=mod,quick
+InsertName,5=QUICK
+Insert,6=mod,skippy
+InsertName,6=SKIPPY
+Insert,7=mod,echo
+InsertName,7=ECHO
+Insert,8=mod,stomp
+InsertName,8=STOMP
 
 Scroll=4
 ScrollDefault=mod,no reverse,no split,no alternate
@@ -2972,14 +2972,16 @@ ScrollName,3=SPLIT
 Scroll,4=mod,alternate
 ScrollName,4=ALTERNATE
 
-Holds=3
-HoldsDefault=mod,no noholds,no planted
+Holds=4
+HoldsDefault=mod,no noholds,no planted,no twister
 Holds,1=mod,noholds
 HoldsName,1=OFF
 Holds,2=
 HoldsName,2=ON
 Holds,3=mod,planted
 HoldsName,3=PLANTED
+Holds,4=mod,twister
+HoldsName,4=TWISTER
 
 Mines=3
 MinesDefault=mod,no nomines,no mines
