--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -2065,11 +2065,12 @@ TimerSeconds=0
 PrevScreen=ScreenOptionsMenu@ScreenOptionsMaster
 NextScreen=ScreenOptionsMenu@ScreenOptionsMaster
 
-OptionMenuFlags=rows,4;together;explanations
+OptionMenuFlags=rows,5;together;explanations
 Line1=conf,CoinMode
 Line2=conf,SongsPerPlay
 Line3=conf,CoinsPerCredit
-Line4=conf,JointPremium
+Line4=conf,VersusPremium
+Line5=conf,DoublePremium
 
 [ScreenMachineOptions]
 StyleIcon=0
