separate "credits info" text into "credits" and "player info" force reload of metrics after retry for missing metric

--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -1645,10 +1645,12 @@ TimerSeconds=0
 [ScreenSystemLayer]
 StatsX=632
 StatsY=10
-CreditsP1X=120
-CreditsP1Y=474
-CreditsP2X=520
-CreditsP2Y=474
+PlayerInfoP1X=120
+PlayerInfoP1Y=474
+PlayerInfoP2X=520
+PlayerInfoP2Y=474
+CreditsX=320
+CreditsY=474
 CreditsColor=1,1,1,1
 CreditsShadowLength=0
 CreditsZoom=1.0
