--- a/stepmania/src/StepMania.vcproj
+++ b/stepmania/src/StepMania.vcproj
@@ -1613,6 +1613,12 @@ cl /Zl /nologo /c verstub.cpp /Fo&quot;$(IntDir)&quot;\
 				RelativePath=".\RageTexture.h">
 			</File>
 			<File
+				RelativePath="RageTextureID.cpp">
+			</File>
+			<File
+				RelativePath="RageTextureID.h">
+			</File>
+			<File
 				RelativePath=".\RageTextureManager.cpp">
 			</File>
 			<File
