add MenuTimer metrics

--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -1723,6 +1723,18 @@ StyleIconOffCommand=bouncebegin,0.5;addx,640;
 TimerOnCommand=x,590;y,22;addx,640;spring,0.5;addx,-640
 TimerOffCommand=bouncebegin,0.5;addx,640;
 
+[MenuTimer]
+WarningStart=6
+WarningBeepStart=5
+OnCommand=stoptweening;shadowlength,0;zoomx,1
+WarningCommand6=stoptweening;sleep,0.8;linear,0.2;zoomx,0
+WarningCommand5=stoptweening;linear,0.2;zoomx,1;sleep,0.6;linear,0.2;zoomx,0;glowshift;effectperiod,0.15;effectcolor1,1,0,0,0;effectcolor2,1,0,0,1
+WarningCommand4=stoptweening;linear,0.2;zoomx,1;sleep,0.6;linear,0.2;zoomx,0
+WarningCommand3=stoptweening;linear,0.2;zoomx,1;sleep,0.6;linear,0.2;zoomx,0
+WarningCommand2=stoptweening;linear,0.2;zoomx,1;sleep,0.6;linear,0.2;zoomx,0
+WarningCommand1=stoptweening;linear,0.2;zoomx,1;sleep,0.6;linear,0.2;zoomx,0
+WarningCommand0=stoptweening;stopeffect;linear,0.2;zoomx,1
+
 [ScreenOptions]
 IconsP1X=40
 IconsP2X=600
