--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -2144,7 +2144,7 @@ PrevScreen=ScreenOptionsMenu@ScreenOptionsMaster
 NextScreen=ScreenOptionsMenu@ScreenOptionsMaster
 
 OptionMenuFlags=rows,6;together;explanations
-Line1=conf,BackgroundMode;title,Mode
+Line1=conf,BackgroundMode
 Line2=conf,Brightness
 Line3=conf,Danger
 Line4=conf,DancingCharacters
@@ -2620,38 +2620,21 @@ OptionMenuFlags=together;forceallplayers;rows,15;smnavigation
 # This NextScreen is only used for the "exit" choice.
 NextScreen=ScreenTitleMenu
 PrevScreen=ScreenTitleMenu
-Line1=list,Appearance Options;title,;
-Line2=list,Autogen Options;title,;
-Line3=list,Background Options;title,;
-Line4=list,Bookkeeping;title,;
-Line5=list,Center Image;title,;
-Line6=list,Coin Options;title,;
-Line7=list,Config Key/Joy Mappings;title,;
-Line8=list,Input Options;title,;
-Line9=list,Gameplay Options;title,;
-Line10=list,Graphic Options;title,;
-Line11=list,Machine Options;title,;
-Line12=list,Sound Options;title,;
-Line13=list,Profile Options;title,;
-Line14=list,Reload Songs/Courses;title,;
-Line15=list,Test Input;title,;
-
-AppearanceOptions=
-AutogenOptions=
-BackgroundOptions=
-Bookkeeping=
-CenterImage=
-CoinOptions=
-ConfigKey/JoyMappings=
-InputOptions=
-GameplayOptions=
-GraphicOptions=
-MachineOptions=
-SoundOptions=
-ProfileOptions=
-ReloadSongs/Courses=
-TestInput=
-
+Line1=list,Appearance Options
+Line2=list,Autogen Options
+Line3=list,Background Options
+Line4=list,Bookkeeping
+Line5=list,Center Image
+Line6=list,Coin Options
+Line7=list,Config Key/Joy Mappings
+Line8=list,Input Options
+Line9=list,Gameplay Options
+Line10=list,Graphic Options
+Line11=list,Machine Options
+Line12=list,Sound Options
+Line13=list,Profile Options
+Line14=list,Reload Songs/Courses
+Line15=list,Test Input
 
 [TextBanner]
 TitleHorizX=-90
@@ -2729,11 +2712,11 @@ NextScreen=
 OptionMenuFlags=rows,14
 
 Line1=list,Speed
-Line2=list,Accel;title,Acceler::-ation
+Line2=list,Accel
 Line3=list,Effect
-Line4=list,Appearance;title,Appear::-ance
+Line4=list,Appearance
 Line5=list,Turn
-Line6=list,Insert;title,Insert
+Line6=list,Insert
 Line7=list,Scroll
 Line8=list,NoteSkins
 Line9=list,Holds
@@ -2770,14 +2753,14 @@ PrevScreen=ScreenOptionsMenu@ScreenOptionsMaster
 NextScreen=ScreenOptionsMenu@ScreenOptionsMaster
 
 OptionMenuFlags=rows,8
-Line1=list,LifeType;title,Life::Type
-Line2=list,BarDrain;title,Bar::Drain
-Line3=list,BatLives;title,Bat::Lives
+Line1=list,LifeType
+Line2=list,BarDrain
+Line3=list,BatLives
 Line4=list,Fail
-Line5=list,AssistTick;title,Assist::Tick
+Line5=list,AssistTick
 Line6=list,Rate
-Line7=list,AutoAdjust;title,Auto::Adjust
-Line8=list,SaveScores;title,Save::Scores
+Line7=list,AutoAdjust
+Line8=list,SaveScores
 
 
 [ScreenCredits]
