tweak credits text add antialiasing option to menus

--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -2110,17 +2110,18 @@ TimerSeconds=0
 PrevScreen=ScreenOptionsMenu@ScreenOptionsMaster
 NextScreen=ScreenOptionsMenu@ScreenOptionsMaster
 
-OptionMenuFlags=rows,10;together;explanations
+OptionMenuFlags=rows,11;together;explanations
 Line1=conf,DisplayMode
 Line2=conf,DisplayResolution
 Line3=conf,DisplayColor
 Line4=conf,TextureResolution
 Line5=conf,TextureColor
 Line6=conf,MovieColor
-Line7=conf,KeepTexturesInMemory
-Line8=conf,RefreshRate
-Line9=conf,WaitForVsync
-Line10=conf,ShowStats
+Line7=conf,AntiAliasing
+Line8=conf,KeepTexturesInMemory
+Line9=conf,RefreshRate
+Line10=conf,WaitForVsync
+Line11=conf,ShowStats
 
 [ScreenGameplayOptions]
 StyleIcon=0
@@ -2984,7 +2985,7 @@ HoldsName,4=TWISTER
 Mines=3
 MinesDefault=mod,no nomines,no mines
 Mines,1=mod,nomines
-MinesName,1=OFF
+MinesName,1=REMOVE
 Mines,2=
 MinesName,2=ON
 Mines,3=mod,mines
