clean up premium coin logic

--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -2079,12 +2079,11 @@ TimerSeconds=0
 PrevScreen=ScreenOptionsMenu@ScreenOptionsMaster
 NextScreen=ScreenOptionsMenu@ScreenOptionsMaster
 
-OptionMenuFlags=rows,5;together;explanations
+OptionMenuFlags=rows,4;together;explanations
 Line1=conf,CoinMode
 Line2=conf,SongsPerPlay
 Line3=conf,CoinsPerCredit
-Line4=conf,VersusPremium
-Line5=conf,DoublePremium
+Line4=conf,Premium
 
 [ScreenMachineOptions]
 StyleIcon=0
