add doubles premium messages

--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -112,10 +112,10 @@ NextScreen2=ScreenSelectDifficulty
 NextScreen3=ScreenSelectDifficulty
 NextScreen4=ScreenSelectDifficulty
 NextScreen5=ScreenSelectDifficulty
-JointPremiumX=550
-JointPremiumY=84
-JointPremiumOnCommand=addx,400;bounceend,0.5;addx,-400;glowshift;effectcolor1,1,1,1,0;effectcolor2,1,1,1,0.3
-JointPremiumOffCommand=bouncebegin,0.5;addx,400
+PremiumX=550
+PremiumY=84
+PremiumOnCommand=addx,400;bounceend,0.5;addx,-400;glowshift;effectcolor1,1,1,1,0;effectcolor2,1,1,1,0.3
+PremiumOffCommand=bouncebegin,0.5;addx,400
 Icon1X=60
 Icon1Y=84
 Icon1OnCommand=addx,-640;sleep,0.20;decelerate,0.3;addx,640
