use separate graphics for machine record, category record, and course record

--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -1358,6 +1358,22 @@ PersonalRecordP2X=570
 PersonalRecordP2Y=398
 PersonalRecordP2OnCommand=diffusealpha,0;linear,0.7;diffusealpha,1;glowshift
 PersonalRecordP2OffCommand=linear,0.7;diffusealpha,0
+CategoryRecordP1X=134
+CategoryRecordP1Y=398
+CategoryRecordP1OnCommand=diffusealpha,0;linear,0.7;diffusealpha,1;glowshift
+CategoryRecordP1OffCommand=linear,0.7;diffusealpha,0
+CategoryRecordP2X=506
+CategoryRecordP2Y=398
+CategoryRecordP2OnCommand=diffusealpha,0;linear,0.7;diffusealpha,1;glowshift
+CategoryRecordP2OffCommand=linear,0.7;diffusealpha,0
+CourseRecordP1X=134
+CourseRecordP1Y=398
+CourseRecordP1OnCommand=diffusealpha,0;linear,0.7;diffusealpha,1;glowshift
+CourseRecordP1OffCommand=linear,0.7;diffusealpha,0
+CourseRecordP2X=506
+CourseRecordP2Y=398
+CourseRecordP2OnCommand=diffusealpha,0;linear,0.7;diffusealpha,1;glowshift
+CourseRecordP2OffCommand=linear,0.7;diffusealpha,0
 TryExtraStageX=320
 TryExtraStageY=428
 TryExtraStageOnCommand=diffusealpha,0;linear,0.7;diffusealpha,1;glowshift
