--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -1993,8 +1993,8 @@ BannerWidth=564
 BannerHeight=184
 
 [LyricDisplay]
-InCommand=shadowlength,0;zoomy,0;spring,0.20;zoomy,1;
-OutCommand=linear,0.20;zoomy,0
+InCommand=shadowlength,0;diffusealpha,0;linear,0.2;diffusealpha,0.5
+OutCommand=linear,0.2;diffusealpha,0
 WipeDimFactor=0.5,0.5,0.5,0.5
 
 [LifeMeterBattery Percent]
