add option to save modifiers to profile

--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -1993,7 +1993,7 @@ BannerWidth=564
 BannerHeight=184
 
 [LyricDisplay]
-InCommand=shadowlength,0;diffusealpha,0;linear,0.2;diffusealpha,0.5
+InCommand=shadowlength,0;diffusealpha,0;linear,0.2;diffusealpha,0.6
 OutCommand=linear,0.2;diffusealpha,0
 WipeDimFactor=0.5,0.5,0.5,0.5
 
@@ -2725,7 +2725,7 @@ StyleIcon=0
 PrevScreen=
 NextScreen=
 
-OptionMenuFlags=rows,14
+OptionMenuFlags=rows,15
 
 Line1=list,Speed
 Line2=list,Accel
@@ -2741,6 +2741,7 @@ Line11=list,Hide
 Line12=list,Persp
 Line13=Steps
 Line14=Characters
+Line15=SaveToProfile
 
 [ScreenRaveOptions]
 PrevScreen=ScreenSelectMusic
