Default  Theme Metrics Update

--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -802,6 +802,7 @@ StyleIcon=1
 NextScreen=ScreenGameplay
 
 [ScreenGameplay]
+ShowEvaluationOnFail=0
 PressBlockY=10
 StaticBGY=240
 StaticBGX=320
@@ -1381,10 +1382,12 @@ TryExtraStageOffCommand=linear,0.7;diffusealpha,0
 SpinGrades=1
 CheerDelaySeconds=2.5
 NoMarvelousShiftUp=15
+FailedScreen=ScreenGameOver
 
 [ScreenEvaluationStage]
 NextScreen=ScreenSelectMusic
 EndScreen=ScreenEvaluationSummary
+FailedScreen=ScreenGameOver
 Type=stage
 ShowBannerArea=1
 ShowGradeArea=1
@@ -1421,6 +1424,7 @@ JudgeSoundIfJudgeGraphicsFullAlpha=0
 [ScreenEvaluationSummary]
 NextScreen=ScreenNameEntry
 EndScreen=ScreenNameEntry
+FailedScreen=ScreenGameOver
 Type=summary
 ShowBannerArea=1
 ShowGradeArea=1
@@ -1457,6 +1461,7 @@ JudgeSoundIfJudgeGraphicsFullAlpha=0
 [ScreenEvaluationNonstop]
 NextScreen=ScreenNameEntry
 EndScreen=ScreenNameEntry
+FailedScreen=ScreenGameOver
 Type=course
 ShowBannerArea=1
 ShowGradeArea=1
@@ -1493,6 +1498,7 @@ JudgeSoundIfJudgeGraphicsFullAlpha=0
 [ScreenEvaluationOni]
 NextScreen=ScreenNameEntry
 EndScreen=ScreenNameEntry
+FailedScreen=ScreenGameOver
 Type=course
 ShowBannerArea=1
 ShowGradeArea=0
@@ -1529,6 +1535,7 @@ JudgeSoundIfJudgeGraphicsFullAlpha=0
 [ScreenEvaluationEndless]
 NextScreen=ScreenNameEntry
 EndScreen=ScreenNameEntry
+FailedScreen=ScreenGameOver
 Type=course
 ShowBannerArea=1
 ShowGradeArea=0
@@ -1565,6 +1572,7 @@ JudgeSoundIfJudgeGraphicsFullAlpha=0
 [ScreenEvaluationBattle]
 NextScreen=ScreenSelectMusic
 EndScreen=ScreenEvaluationSummary
+FailedScreen=ScreenGameOver
 Type=stage
 ShowBannerArea=1
 ShowGradeArea=1
@@ -1601,6 +1609,7 @@ JudgeSoundIfJudgeGraphicsFullAlpha=0
 [ScreenEvaluationRave]
 NextScreen=ScreenSelectMusic
 EndScreen=ScreenEvaluationSummary
+FailedScreen=ScreenGameOver
 Type=stage
 ShowBannerArea=1
 ShowGradeArea=1
@@ -3069,14 +3078,16 @@ BatLivesName,9=9
 BatLives,10=mod,10 lives
 BatLivesName,10=10
 
-Fail=3,together
+Fail=4,together
 FailDefault=
 Fail,1=mod,failarcade
 FailName,1=ARCADE
 Fail,2=mod,failendofsong
 FailName,2=END OF SONG
-Fail,3=mod,failoff
-FailName,3=OFF
+Fail,3=mod,failpassmark
+FailName,3=PASSMARK
+Fail,4=mod,failoff
+FailName,4=OFF
 
 AssistTick=2,together
 AssistTickDefault=
@@ -3205,6 +3216,14 @@ Test Input=1,together
 Test InputDefault=
 Test Input,1=screen,ScreenTestInput
 Test InputName,1=Test Input
+
+[DancingCharacters]
+#2D Character X/Y positions in relation to the center
+#of the screen
+2DCharacterXP1=-220
+2DCharacterYP1=0
+2DCharacterXP2=220
+2DCharacterYP2=0
 
 [FadingBanner]
 FadeSeconds=0.25
