Fix to metrics.ini -- failpassmark removed from mod screen

--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -3078,16 +3078,14 @@ BatLivesName,9=9
 BatLives,10=mod,10 lives
 BatLivesName,10=10
 
-Fail=4,together
+Fail=3,together
 FailDefault=
 Fail,1=mod,failarcade
 FailName,1=ARCADE
 Fail,2=mod,failendofsong
 FailName,2=END OF SONG
-Fail,3=mod,failpassmark
-FailName,3=PASSMARK
-Fail,4=mod,failoff
-FailName,4=OFF
+Fail,3=mod,failoff
+FailName,3=OFF
 
 AssistTick=2,together
 AssistTickDefault=
@@ -3224,6 +3222,10 @@ Test InputName,1=Test Input
 2DCharacterYP1=0
 2DCharacterXP2=220
 2DCharacterYP2=0
+
+[FadingBanner]
+FadeSeconds=0.25
+terYP2=0
 
 [FadingBanner]
 FadeSeconds=0.25
