--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -2134,7 +2134,7 @@ TimerSeconds=0
 PrevScreen=ScreenOptionsMenu@ScreenOptionsMaster
 NextScreen=ScreenOptionsMenu@ScreenOptionsMaster
 
-OptionMenuFlags=rows,11;together;explanations
+OptionMenuFlags=rows,12;together;explanations
 Line1=conf,DisplayMode
 Line2=conf,DisplayResolution
 Line3=conf,DisplayColor
@@ -2146,6 +2146,7 @@ Line8=conf,KeepTexturesInMemory
 Line9=conf,RefreshRate
 Line10=conf,WaitForVsync
 Line11=conf,ShowStats
+Line12=conf,ShowBanners
 
 [ScreenGameplayOptions]
 StyleIcon=0
