--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -1901,6 +1901,13 @@ MissCommand=shadowlength,4;diffuse,1,.3,0,1;zoom,2.0;y,-20;linear,0.8;y,20;sleep
 NormalColor=1.0,1.0,0.0,1	// yellow
 ChangeColor=1.0,0.5,0.0,1	// orange
 ExtraColor=0.7,0.0,0.0,1	// dark red
+NoBPMText=...
+TextX=0
+TextY=0
+TextOnCommand=horizalign,right;shadowlength,0
+LabelX=0
+LabelY=0
+LabelOnCommand=horizalign,left
 
 [GrayArrow]
 StepZoom=0.75
