--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -1731,6 +1731,9 @@ NumStrips=2
 NumFeetInMeter=10
 MaxFeetInMeter=14
 GlowIfMeterGreaterThan=9
+FeetX=0
+FeetY=0
+FeetOnCommand=shadowlength,2
 
 [TransitionKeepAlive]
 StopMusicOnNext=0
