add DifficultyMeter metrics

--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -1734,6 +1734,18 @@ GlowIfMeterGreaterThan=9
 FeetX=0
 FeetY=0
 FeetOnCommand=shadowlength,2
+ShowFeet=1
+ShowDifficulty=0
+
+[EditDifficultyMeter]
+NumFeetInMeter=10
+MaxFeetInMeter=14
+GlowIfMeterGreaterThan=9
+FeetX=0
+FeetY=0
+FeetOnCommand=shadowlength,2
+ShowFeet=1
+ShowDifficulty=0
 
 [TransitionKeepAlive]
 StopMusicOnNext=0
