--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -1736,6 +1736,7 @@ FeetY=0
 FeetOnCommand=shadowlength,2
 ShowFeet=1
 ShowDifficulty=0
+ShowMeter=0
 
 [EditDifficultyMeter]
 NumFeetInMeter=10
@@ -1746,6 +1747,7 @@ FeetY=0
 FeetOnCommand=shadowlength,2
 ShowFeet=1
 ShowDifficulty=0
+ShowMeter=0
 
 [TransitionKeepAlive]
 StopMusicOnNext=0
