updated metric types

--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -679,6 +679,10 @@ OptionsMessageY=240
 OptionsMessageOnCommand=zoomy,0;linear,0.25;zoomy,1;sleep,1;linear,0.25;zoomy,0
 CourseContentsX=160
 CourseContentsY=336
+CourseContentsOnCommand=
+CourseContentsOffCommand=
+CourseContentsShowCommand=
+CourseContentsHideCommand=
 TimerSeconds=60
 StyleIcon=1
 SampleMusicDelay=0.25
@@ -2710,22 +2714,24 @@ ThreeLinesSubTitleY=0
 ThreeLinesArtistY=10
 
 [CourseEntryDisplay]
+BarX=0
+BarY=0
+BarOnCommand=
 TextBannerX=0
 TextBannerY=0
-TextBannerZoom=1.0
+TextBannerOnCommand=shadowlength,0
 NumberX=-118
 NumberY=0
-NumberZoom=1.0
+NumberOnCommand=shadowlength,0
 FootX=98
 FootY=-8
-FootZoom=1.0
+FootOnCommand=shadowlength,0
 DifficultyX=120
 DifficultyY=-8
-DifficultyZoom=0.7
+DifficultyOnCommand=zoom,0.7;shadowlength,0
 ModifiersX=128
 ModifiersY=10
-ModifiersZoom=0.5
-ModifiersHorizAlign=2
+ModifiersOnCommand=horizalign,right;zoom,0.5;shadowlength,0
 
 [DifficultyDisplay]
 IconOnCommand=stoptweening;linear,0.1;diffusealpha,1
