--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -550,6 +550,8 @@ StyleIcon=1
 [ScreenSelectMusic]
 DefaultSort=GROUP
 FOV=0
+FOVCenterX=320
+FOVCenterY=240
 BannerX=148
 BannerY=172
 BannerOnCommand=addx,-400;bounceend,0.5;addx,400
