add FeetIsDifficultyColor metric

--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -1740,6 +1740,7 @@ GlowIfMeterGreaterThan=9
 FeetX=0
 FeetY=0
 FeetOnCommand=shadowlength,2
+FeetIsDifficultyColor=1
 ShowFeet=1
 ShowDifficulty=0
 ShowMeter=0
@@ -1751,6 +1752,7 @@ GlowIfMeterGreaterThan=9
 FeetX=0
 FeetY=0
 FeetOnCommand=shadowlength,2
+FeetIsDifficultyColor=1
 ShowFeet=1
 ShowDifficulty=0
 ShowMeter=0
