--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -552,6 +552,10 @@ DefaultSort=GROUP
 FOV=0
 FOVCenterX=320
 FOVCenterY=240
+ArtistDisplayX=0
+ArtistDisplayY=0
+ArtistDisplayOffCommand=
+ArtistDisplayOnCommand=hidden,1
 BannerX=148
 BannerY=172
 BannerOnCommand=addx,-400;bounceend,0.5;addx,400
@@ -2740,6 +2744,11 @@ ModifiersOnCommand=horizalign,right;zoom,0.5;shadowlength,0
 [DifficultyDisplay]
 IconOnCommand=stoptweening;linear,0.1;diffusealpha,1
 IconOffCommand=stoptweening;linear,0.1;diffusealpha,0
+
+[ArtistDisplay]
+TipShowTime=1
+TipOnCommand=
+TipY=0
 
 [ScreenSelectGame]
 StyleIcon=0
