--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -1926,7 +1926,7 @@ GoodCommand=shadowlength,4;diffuse,0,1,1,1;zoom,2.2;linear,0.05;zoom,2;sleep,0.8
 BooCommand=shadowlength,4;diffuse,1,.1,1,1;zoom,2.0;vibrate;effectmagnitude,4,8,8;sleep,0.8;linear,0;diffusealpha,0
 MissCommand=shadowlength,4;diffuse,1,.3,0,1;zoom,2.0;y,-20;linear,0.8;y,20;sleep,0.8;linear,0;diffusealpha,0
 
-[BPM]
+[BPMDisplay]
 NormalColor=1.0,1.0,0.0,1	// yellow
 ChangeColor=1.0,0.5,0.0,1	// orange
 ExtraColor=0.7,0.0,0.0,1	// dark red
