--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -566,10 +566,10 @@ BannerFrameX=160
 BannerFrameY=162
 BannerFrameOnCommand=addx,-400;bounceend,0.5;addx,400
 BannerFrameOffCommand=bouncebegin,0.5;addx,-400
-BPMX=160
-BPMY=121
-BPMOnCommand=addx,-400;bounceend,0.5;addx,400
-BPMOffCommand=bouncebegin,0.5;addx,-400
+BPMDisplayX=160
+BPMDisplayY=121
+BPMDisplayOnCommand=addx,-400;bounceend,0.5;addx,400
+BPMDisplayOffCommand=bouncebegin,0.5;addx,-400
 StageX=40
 StageY=121
 StageOnCommand=addx,-400;bounceend,0.5;addx,400
