--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -643,6 +643,10 @@ ScoreP1SortChangeCommand=stoptweening;decelerate,0.128;x,920;sleep,0.128;acceler
 ScoreP2SortChangeCommand=stoptweening;decelerate,0.128;x,920;sleep,0.128;accelerate,0.25;x,520
 ScoreFrameP1SortChangeCommand=stoptweening;decelerate,0.128;x,920;sleep,0.128;accelerate,0.25;x,520
 ScoreFrameP2SortChangeCommand=stoptweening;decelerate,0.128;x,920;sleep,0.128;accelerate,0.25;x,520
+MachineRankX=0
+MachineRankY=0
+MachineRankOnCommand=hidden,1
+MachineRankOffCommand=
 MeterFrameP1X=82
 MeterFrameP1Y=432
 MeterFrameP1OnCommand=diffusealpha,0;linear,0.5;diffusealpha,1
