--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -617,6 +617,7 @@ GraphX=160
 GraphY=334
 GraphOnCommand=
 GraphOffCommand=
+ShowDifficultyList=0
 SortIconX=252
 SortIconY=121
 SortIconOnCommand=addx,-400;bounceend,0.5;addx,400
