--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -833,10 +833,10 @@ NextScreenOni=ScreenEvaluationOni
 NextScreenEndless=ScreenEvaluationEndless
 NextScreenBattle=ScreenEvaluationBattle
 NextScreenRave=ScreenEvaluationRave
-BPMX=999 // don't show by default
-BPMY=999
-BPMOnCommand=zoom,0
-BPMOffCommand=
+BPMDisplayX=999 // don't show by default
+BPMDisplayY=999
+BPMDisplayOnCommand=zoom,0
+BPMDisplayOffCommand=
 SongTitleX=999
 SongTitleY=999
 SongTitleOnCommand=zoom,0
