--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -618,6 +618,7 @@ GraphY=334
 GraphOnCommand=
 GraphOffCommand=
 ShowDifficultyList=0
+ShowPanes=0
 SortIconX=252
 SortIconY=121
 SortIconOnCommand=addx,-400;bounceend,0.5;addx,400
