--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -1754,6 +1754,7 @@ FeetIsDifficultyColor=1
 ShowFeet=1
 ShowDifficulty=0
 ShowMeter=0
+FeetPerDifficulty=0
 
 [EditDifficultyMeter]
 NumFeetInMeter=10
@@ -1766,6 +1767,7 @@ FeetIsDifficultyColor=1
 ShowFeet=1
 ShowDifficulty=0
 ShowMeter=0
+FeetPerDifficulty=0
 
 [TransitionKeepAlive]
 StopMusicOnNext=0
