--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -1733,6 +1733,8 @@ SortMenuColor=1,1,0,1
 ShowRoulette=1
 ShowRandom=1
 Use3D=0
+Wheel3DRadius=200 # Possibly safe defaults?
+CirclePercent=0.5
 MenuNames=GROUP:TITLE:BPM:PLAYERS' BEST:TOP GRADE:ARTIST:EASY METER:MEDIUM METER:HARD METER
 MenuActions=sort,GROUP:sort,TITLE:sort,BPM:sort,PLAYERS BEST:sort,TOP GRADE:sort,ARTIST:sort,EASY METER:sort,MEDIUM METER:sort,HARD METER
 
