better MusicWheelItem theming

--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -1703,8 +1703,12 @@ SectionNameX=-30
 SectionZoom=1.0
 RouletteX=-30
 RouletteZoom=1.3
-CourseX=-130
-CourseZoom=1.3
+CourseNameX=-130
+CourseNameY=0
+CourseNameOnCommand=shadowlength,0;zoom,1.3;horizAlign,left
+SortX=-130
+SortY=0
+SortOnCommand=shadowlength,0;zoom,1.3;horizAlign,left
 GradeP1X=82
 GradeP2X=118
 
