--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -1724,6 +1724,14 @@ ItemCurveX=85
 ItemSpacingY=46
 NoCurving=0
 NumWheelItems=13
+MusicWheelItemStartOnCommand=addx,320
+MusicWheelItemFinishOnCommand=accelerate,0.2;addx,-320
+MusicWheelItemStartOffCommand=
+MusicWheelItemFinishOffCommand=decelerate,0.2;addx,320
+WheelItemOnDelayCenter=0
+WheelItemOnDelayOffset=0.04
+WheelItemOffDelayCenter=0
+WheelItemOffDelayOffset=0.04
 NumSectionColors=7
 SectionColor1=0.8,0.1,0.6,1	// pink
 SectionColor2=0.6,0.4,0.8,1	// purple
