add add ScreenSelectMusic wheel under

--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -669,6 +669,10 @@ WheelX=480
 WheelY=244
 WheelOnCommand=
 WheelOffCommand=
+WheelUnderX=0
+WheelUnderY=0
+WheelUnderOnCommand=
+WheelUnderOffCommand=
 SongOptionsX=160
 SongOptionsY=334
 SongOptionsOnCommand=zoom,0.5;shadowlength,2;diffusealpha,0;linear,0.5;diffusealpha,1
