--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -1,4 +1,4 @@
-﻿// Possible NextScreen names:
+// Possible NextScreen names:
 // - ScreenCaution
 // - ScreenEz2SelectPlayer
 // - ScreenSelectMode
@@ -579,6 +579,14 @@ CDTitleY=148
 CDTitleOnCommand=addx,-400;bounceend,0.5;addx,400
 CDTitleOffCommand=bouncebegin,0.5;addx,-400
 CDTitleSpinSeconds=4
+CharacterIconP1Y=999
+CharacterIconP1X=999
+CharacterIconP2Y=999
+CharacterIconP2X=999
+CharacterIconP1OnCommand=
+CharacterIconP2OnCommand=
+CharacterIconP1OffCommand=
+CharacterIconP2OffCommand=
 DifficultyFrameP1X=60
 DifficultyFrameP1Y=248
 DifficultyFrameP1OnCommand=diffusealpha,0;linear,0.5;diffusealpha,1
