hide these better

--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -583,8 +583,8 @@ CharacterIconP1Y=999
 CharacterIconP1X=999
 CharacterIconP2Y=999
 CharacterIconP2X=999
-CharacterIconP1OnCommand=
-CharacterIconP2OnCommand=
+CharacterIconP1OnCommand=hidden,1
+CharacterIconP2OnCommand=hidden,1
 CharacterIconP1OffCommand=
 CharacterIconP2OffCommand=
 DifficultyFrameP1X=60
