add TapJudgmentsUnderField, HoldJudgmentsUnderField

--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -1951,6 +1951,8 @@ BrightGhostComboThreshold=100
 StartDrawingAtPixels=-60
 StopDrawingAtPixels=350
 MaxProTimingError=100
+TapJudgmentsUnderField=0
+HoldJudgmentsUnderField=0
 
 [ProTimingDisplay]
 MarvelousCommand=shadowlength,4;diffuse,1,1,0,1;zoom,2.6;linear,0.05;zoom,2;sleep,0.8;linear,0;diffusealpha,0;glowblink;effectperiod,0.05;effectcolor1,1,1,1,0;effectcolor2,1,1,1,0.8
