wheel highlight metrics

--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -1740,6 +1740,13 @@ MusicWheelItemStartOnCommand=addx,320
 MusicWheelItemFinishOnCommand=accelerate,0.2;addx,-320
 MusicWheelItemStartOffCommand=
 MusicWheelItemFinishOffCommand=decelerate,0.2;addx,320
+HighlightOnCommand=glowshift;effectcolor1,#FFFFFF66;effectcolor2,#FFFFFFFF
+HighlightStartOnCommand=addx,320
+HighlightFinishOnCommand=sleep,0.05;accelerate,0.4;addx,-320
+HighlightFinishOnSortCommand=accelerate,0.2;addx,-320
+HighlightStartOffCommand=
+HighlightFinishOffCommand=decelerate,0.2;addx,320
+HighlightFinishOffSortCommand=decelerate,0.2;addx,320
 WheelItemOnDelayCenter=0
 WheelItemOnDelayOffset=0.04
 WheelItemOffDelayCenter=0
