--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -934,6 +934,22 @@ ScoreP2ExtraX=534
 ScoreP2ExtraY=38
 ScoreP2ExtraOnCommand=addy,-100;sleep,0.5;linear,1;addy,100
 ScoreP2ExtraOffCommand=linear,1;addy,-100
+SecondaryScoreP1X=300
+SecondaryScoreP1Y=240
+SecondaryScoreP1OnCommand=
+SecondaryScoreP1OffCommand=
+SecondaryScoreP1ExtraX=300
+SecondaryScoreP1ExtraY=240
+SecondaryScoreP1ExtraOnCommand=
+SecondaryScoreP1ExtraOffCommand=
+SecondaryScoreP2X=340
+SecondaryScoreP2Y=240
+SecondaryScoreP2OnCommand=
+SecondaryScoreP2OffCommand=
+SecondaryScoreP2ExtraX=340
+SecondaryScoreP2ExtraY=240
+SecondaryScoreP2ExtraOnCommand=
+SecondaryScoreP2ExtraOffCommand=
 PlayerOptionsP1X=320
 PlayerOptionsP1Y=434
 PlayerOptionsP1OnCommand=zoom,0.5;addy,100;sleep,0.5;linear,1;addy,-100
@@ -3318,3 +3334,9 @@ TipOnCommand=shadowlength,0;diffuseblink
 
 [CombinedLifeMeterTug]
 MeterWidth=550
+
+[ScoreDisplayRave]
+MeterP1OnCommand=rotationz,-90
+MeterP2OnCommand=rotationz,-90
+LevelP1OnCommand=addy,-140
+LevelP2OnCommand=addy,-140
