--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -1968,6 +1968,11 @@ ComboXOffsetOneSideP2=0
 ComboXOffsetBothSides=0
 ComboY=270
 ComboYReverse=210
+AttackDisplayXOffsetOneSideP1=0
+AttackDisplayXOffsetOneSideP2=0
+AttackDisplayXOffsetBothSides=0
+AttackDisplayY=190
+AttackDisplayYReverse=290
 HoldJudgmentYStandard=150
 HoldJudgmentYReverse=330
 BrightGhostComboThreshold=100
