--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -1971,8 +1971,8 @@ ComboYReverse=210
 AttackDisplayXOffsetOneSideP1=0
 AttackDisplayXOffsetOneSideP2=0
 AttackDisplayXOffsetBothSides=0
-AttackDisplayY=190
-AttackDisplayYReverse=290
+AttackDisplayY=170
+AttackDisplayYReverse=310
 HoldJudgmentYStandard=150
 HoldJudgmentYReverse=330
 BrightGhostComboThreshold=100
@@ -3345,3 +3345,7 @@ MeterP1OnCommand=rotationz,-90
 MeterP2OnCommand=rotationz,-90
 LevelP1OnCommand=addy,-140
 LevelP2OnCommand=addy,-140
+
+[AttackDisplay]
+TextP1OnCommand=diffusealpha,0;linear,0.5;diffusealpha,1;sleep,2;linear,0.5;diffusealpha,0
+TextP2OnCommand=diffusealpha,0;linear,0.5;diffusealpha,1;sleep,2;linear,0.5;diffusealpha,0
