tweak credits metrics

--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -1716,13 +1716,13 @@ StatsX=632
 StatsY=10
 PlayerInfoP1X=120
 PlayerInfoP1Y=474
+PlayerInfoP1OnCommand=shadowlength,0
 PlayerInfoP2X=520
 PlayerInfoP2Y=474
+PlayerInfoP2OnCommand=shadowlength,0
 CreditsX=320
 CreditsY=474
-CreditsColor=1,1,1,1
-CreditsShadowLength=0
-CreditsZoom=1.0
+CreditsOnCommand=shadowlength,0
 
 [MusicWheelItem]
 IconX=-136
