--- a/stepmania/src/Makefile.am
+++ b/stepmania/src/Makefile.am
@@ -117,7 +117,8 @@ Lights = arch/Lights/LightsDriver.h \
 LowLevelWindow = arch/LowLevelWindow/LowLevelWindow.h \
 		 arch/LowLevelWindow/LowLevelWindow_SDL.cpp arch/LowLevelWindow/LowLevelWindow_SDL.h
 
-ArchUtils = archutils/Unix/SignalHandler.cpp archutils/Unix/SignalHandler.h
+ArchUtils = archutils/Unix/SignalHandler.cpp archutils/Unix/SignalHandler.h \
+	    archutils/Unix/GetSysInfo.cpp archutils/Unix/GetSysInfo.h
 
 if USE_CRASH_HANDLER
 ArchUtils += archutils/Unix/CrashHandler.cpp archutils/Unix/CrashHandler.h \
