add separate commands for odd and even judgments

--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -1927,6 +1927,18 @@ RightEdge=620
 BottomEdge=460
 
 [Judgment]
+BooOddCommand=
+GoodOddCommand=
+GreatOddCommand=
+MarvelousOddCommand=
+MissOddCommand=
+PerfectOddCommand=
+BooEvenCommand=
+GoodEvenCommand=
+GreatEvenCommand=
+MarvelousEvenCommand=
+MissEvenCommand=
+PerfectEvenCommand=
 MarvelousCommand=shadowlength,4;diffusealpha,1;zoom,1.3;linear,0.05;zoom,1;sleep,0.8;linear,0;diffusealpha,0;glowblink;effectperiod,0.05;effectcolor1,1,1,1,0;effectcolor2,1,1,1,0.8
 PerfectCommand=shadowlength,4;diffusealpha,1;zoom,1.3;linear,0.05;zoom,1;sleep,0.8;linear,0;diffusealpha,0
 GreatCommand=shadowlength,4;diffusealpha,1;zoom,1.2;linear,0.05;zoom,1;sleep,0.8;linear,0;diffusealpha,0
@@ -1934,6 +1946,9 @@ GoodCommand=shadowlength,4;diffusealpha,1;zoom,1.1;linear,0.05;zoom,1;sleep,0.8;
 BooCommand=shadowlength,4;diffusealpha,1;zoom,1.0;vibrate;effectmagnitude,4,8,8;sleep,0.8;linear,0;diffusealpha,0
 MissCommand=shadowlength,4;diffusealpha,1;zoom,1;y,-20;linear,0.8;y,20;sleep,0.8;linear,0;diffusealpha,0
 
+[HoldJudgment]
+NGCommand=shadowlength,4;diffusealpha,1;zoom,1;y,-10;linear,0.8;y,10;sleep,0.5;linear,0;diffusealpha,0
+OKCommand=shadowlength,4;diffusealpha,1;zoom,1.25;linear,0.3;zoomx,1;zoomy,1;sleep,0.5;linear,0;diffusealpha,0
 
 [Combo]
 LabelX=6
@@ -1950,10 +1965,6 @@ NumberMaxZoom=0.9
 NumberMaxZoomAt=300
 PulseZoom=1.2
 TweenSeconds=0.05
-
-[HoldJudgment]
-NGCommand=shadowlength,4;diffusealpha,1;zoom,1;y,-10;linear,0.8;y,10;sleep,0.5;linear,0;diffusealpha,0
-OKCommand=shadowlength,4;diffusealpha,1;zoom,1.25;linear,0.3;zoomx,1;zoomy,1;sleep,0.5;linear,0;diffusealpha,0
 
 [Player]
 GrayArrowsYStandard=96
