--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -2878,6 +2878,15 @@ NextScreen=ScreenStage
 TimerSeconds=30
 StyleIcon=0
 
+OptionMenuFlags=rows,6
+
+Line1=list,Speed
+Line2=list,Accel
+Line3=list,Scroll
+Line4=list,NoteSkins
+Line5=list,Persp
+Line6=Steps
+
 [ScreenSongOptions]
 PrevScreenArcade=ScreenPlayerOptions
 PrevScreenNonstop=ScreenPlayerOptions
