fix tween overflow

--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -3366,5 +3366,5 @@ LevelP1OnCommand=addy,-140
 LevelP2OnCommand=addy,-140
 
 [AttackDisplay]
-TextP1OnCommand=diffusealpha,0;linear,0.5;diffusealpha,1;sleep,2;linear,0.5;diffusealpha,0
-TextP2OnCommand=diffusealpha,0;linear,0.5;diffusealpha,1;sleep,2;linear,0.5;diffusealpha,0
+TextP1OnCommand=stoptweening;diffusealpha,0;linear,0.5;diffusealpha,1;sleep,2;linear,0.5;diffusealpha,0
+TextP2OnCommand=stoptweening;diffusealpha,0;linear,0.5;diffusealpha,1;sleep,2;linear,0.5;diffusealpha,0
