--- a/stepmania/Themes/default/Fonts/_korean 24px.ini
+++ b/stepmania/Themes/default/Fonts/_korean 24px.ini
@@ -20,7 +20,7 @@ line 0=자잦잭젠준지직찾
 line 1=책초치캉커쿨크클
 line 2=키타틴파팍패플피
 line 3=하허혁현혠화정꿔
-line 4=와부담별컨츄꼬벡
+line 4=와부담별컨츄꼬백
 line 5=호심아름다운대한
 line 6=민국성숙가감강같
 line 7=거건검게곡과구그
