--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -2023,8 +2023,10 @@ Easier1=Up,Up
 Easier2=MenuUp,MenuUp
 Harder1=Down,Down
 Harder2=MenuDown,MenuDown
-NextSort1=Up,Down,Up,Down
-NextSort2=MenuUp,MenuDown,MenuUp,MenuDown
+NextSort1=MenuLeft-MenuRight-Start
+NextSort2=MenuLeft+MenuRight
+AllSorts1=Up,Down,Up,Down
+AllSorts2=MenuUp,MenuDown,MenuUp,MenuDown
 Mirror=Up,Left,Right,Left,Right
 Left=Up,Down,Right,Left
 Right=Up,Down,Left,Right
