rename "AllSorts" code to "Menu"

--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -2025,8 +2025,8 @@ Harder1=Down,Down
 Harder2=MenuDown,MenuDown
 NextSort1=MenuLeft-MenuRight-Start
 NextSort2=MenuLeft+MenuRight
-AllSorts1=Up,Down,Up,Down
-AllSorts2=MenuUp,MenuDown,MenuUp,MenuDown
+Menu1=Up,Down,Up,Down
+Menu2=MenuUp,MenuDown,MenuUp,MenuDown
 Mirror=Up,Left,Right,Left,Right
 Left=Up,Down,Right,Left
 Right=Up,Down,Left,Right
