Pop'n Music Theme Changes Themers can optionally enable an All Character / 2D only Character select on the mode select screen (pop'n support)

--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -238,6 +238,14 @@ GuideOffCommand=bouncebegin,0.5;addy,400
 ChoiceListHighlightOffCommand=linear,0.5;diffusealpha,0;glow,1,1,1,0
 ChoiceListFrameOffCommand=linear,0.5;diffusealpha,0;glow,1,1,1,0
 UseModeSpecificBGAnims=0
+EnableCharSelect=0
+Only2DChars=0
+CharacterIconP1Y=240
+CharacterIconP1X=320
+CharacterIconP2Y=240
+CharacterIconP2X=320
+CharacterIconP1OffCommand=linear,0.3;diffusealpha,0;sleep,10
+CharacterIconP2OffCommand=linear,0.3;diffusealpha,0;sleep,10
 
 [ScreenStyleSplash]
 NextScreen=ScreenSelectGroup
